[package]
name = "runiq-lib"
version = "1.2.2" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>", "Julien Abadji <julien.e.abadji@gmail.com>"]
description = "An efficient way to filter duplicate lines from input, à la uniq."
repository = "https://github.com/uinelj/runiq"
keywords = ["filtering", "logging", "unique"]
categories = ["algorithms", "command-line-utilities", "text-processing"]
readme = "README.md"
edition = "2018"
license = "MIT"

[badges]
travis-ci = { repository = "uinelj/runiq" }

[dependencies]
bytelines = "2.2"
clap = "2.33"
fnv = "1.0"
scalable_bloom_filter = "0.1"
twox-hash = "1.6"

[lib]
name = "runiq"
path = "src/lib.rs"
